--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@
         <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
         <label for="Email">Inserisci l'email</label>
         <input type="email" id="email" size="20" />
+        <input type="button"" value="Iscriviti!">
+        <section>
+            <p>Articoli correlati</p>
+            <p>Validare il codice HTML</p>
+            <p>Categoria: develop</p>
+            <p>Data: 18-9-2020</p>
+            <br>Correggere la sintassi
+            <p>Categoria: develop</p>
+            <p>Data: 16-9-2020</p>
+            <br>Meno Kb nella pagina
+            <p>Categoria: ottimizzazione</p>
+            <p>Data: 30-9-2020</p>
+        </section>
+        <footer>
+            <p>Blog Epicode ©2023</p>
+            <p>Testata online di Mario  Rossi, registrata con prot. n.213/2018-via Luigi Einaudi 2 - Milano. P.IVA 00112233</p>
+            <p><a href="#">info@epicode.school</a></p>
+        </footer>
     </div>
 </body>
 </html>
